<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="not_already_registered">Not already registered?</string>
    <string name="register">Register For Free</string>
    <string name="welcome_to_shoe_stop">Welcome to Shoe Stop!</string>
    <string name="welcome_message"><![CDATA[This is the one-stop-shop for all your shoe needs. You want nikes? We got it! Yeeezys? CHECK! If you are a sneaker head, click the button below and lets get sneakin\']]></string>
    <string name="continue_btn">Continue</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_detail">When accessing the next screen, you can either choose to scroll through the list of shoes, or add in your favorite shoes to the list!</string>
    <string name="new_shoe">New Shoe</string>
    <string name="shoe_style_name">The shoe\'s style name</string>
    <string name="shoe_company">The company that makes the shoe</string>
    <string name="shoe_size">What size is the shoe?</string>
    <string name="quote_format">\"%s\"</string>
    <string name="shoe_description">How would you describe the shoe?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">logout</string>
    <string name="menu_toggle">menu toggle</string>
</resources>
